<resources>
    <string name="app_name">Poe-alarm</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="chromatic_orb">Chromatic Orb</string>
    <string name="orb_of_alteration">Orb of Alteration</string>
    <string name="jeweller_s_orb">Jeweller\'s Orb</string>
    <string name="blessed_orb">Blessed Orb</string>
    <string name="orb_of_chance">Orb of Chance</string>
    <string name="cartographer_s_chisel">Cartographer\'s Chisel</string>
    <string name="orb_of_fusing">Orb of Fusing</string>
    <string name="orb_of_alchemy">Orb of Alchemy</string>
    <string name="orb_of_scouring">Orb of Scouring</string>
    <string name="chaos_orb">Chaos Orb</string>
    <string name="orb_of_regret">Orb of Regret</string>
    <string name="regal_orb">Regal Orb</string>
    <string name="gemcutter_s_prism">Gemcutter\'s Prism</string>
    <string name="divine_orb">Divine Orb</string>
    <string name="exalted_orb">Exalted Orb</string>
    <string name="eternal_orb">Eternal Orb</string>
    <string name="decoration_img_bottom">decoration img bottom</string>
    <string name="select_currency">Select Currency</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="vaal_orb">Vaal Orb</string>
    <string name="silver_coin">Silver Coin</string>
    <string name="mirror_of_kalandra">Mirror of Kalandra</string>
    <string name="orb_of_transmutation">Orb of Transmutation</string>
    <string name="orb_of_augmentation">Orb of Augmentation</string>
    <string name="blacksmith_s_whetstone">Blacksmith\'s Whetstone</string>
    <string name="armourer_s_scrap">Armourer\'s Scrap</string>
    <string name="glassblower_s_bauble">Glassblower\'s Bauble</string>
    <string name="scroll_of_wisdom">Scroll of Wisdom</string>
    <string name="scroll_of_portal">Scroll of Portal</string>
    <string name="apprentice_cartographer_s_sextant">Apprentice Cartographer\'s Sextant</string>
    <string name="master_cartographer_s_sextant">Master Cartographer\'s Sextant</string>
    <string name="journeyman_cartographer_s_sextant">Journeyman Cartographer\'s Sextant</string>
    <string name="max">Max:</string>
    <string name="valInExaltedOrbs">Value in Exalted Orbs</string>
    <string name="valInChaosOrbs">Value in Chaos Orbs</string>
    <string name="textview">TextView</string>

    <string-array name="all_currencies">
        <item>@string/exalted_orb</item>
        <item>@string/chaos_orb</item>
        <item>@string/orb_of_fusing</item>
        <item>@string/orb_of_alchemy</item>
        <item>@string/cartographer_s_chisel</item>
        <item>@string/orb_of_regret</item>
        <item>@string/orb_of_scouring</item>
        <item>@string/vaal_orb</item>
        <item>@string/chromatic_orb</item>
        <item>@string/jeweller_s_orb</item>
        <item>@string/silver_coin</item>
        <item>@string/mirror_of_kalandra</item>
        <item>@string/divine_orb</item>
        <item>@string/orb_of_transmutation</item>
        <item>@string/exalted_orb</item>
        <item>@string/orb_of_alteration</item>
        <item>@string/gemcutter_s_prism</item>
        <item>@string/blessed_orb</item>
        <item>@string/regal_orb</item>
        <item>@string/orb_of_augmentation</item>
        <item>@string/eternal_orb</item>
        <item>@string/apprentice_cartographer_s_sextant</item>
        <item>@string/journeyman_cartographer_s_sextant</item>
        <item>@string/master_cartographer_s_sextant</item>
        <item>@string/blacksmith_s_whetstone</item>
        <item>@string/armourer_s_scrap</item>
        <item>@string/glassblower_s_bauble</item>
        <item>@string/scroll_of_wisdom</item>
        <item>@string/scroll_of_portal</item>
    </string-array>
    <string-array name="diff_array">
        <item>"&gt;="</item>
        <item>&lt;=</item>
    </string-array>

</resources>
